@@ -4,6 +4,7 @@ munin (work)
   * Main/Node: Added support for TLS.
   * Installation: Make the single python plugin use @@PYTHON@@ again.
   * Plugin: linux/users now has proper hashbang.
+  * Plugin: Bugfix in generic/sendmail_mail* autoconf.
 
 munin (1.3.0)
 
